--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -52,13 +52,12 @@
             [enabled]="!showLabels"
             [anchor]="'left'"
             [useParentPosition]="true"
+            >Newsfeed</m-tooltip
           >
-            Newsfeed
-          </m-tooltip>
 
-          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__NEWSFEED">
-            Newsfeed
-          </span>
+          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__NEWSFEED"
+            >Newsfeed</span
+          >
         </a>
       </li>
 
@@ -299,9 +298,9 @@
             <ng-container>Boost your channel</ng-container>
           </m-tooltip>
 
-          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__BOOST">
-            Boost
-          </span>
+          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__BOOST"
+            >Boost</span
+          >
         </a>
       </li>
 
@@ -320,9 +319,9 @@
             <i class="material-icons" m-tooltip--anchor>group</i>
             <ng-container i18n="@@COMMON__GROUPS">Groups</ng-container>
           </m-tooltip>
-          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__GROUPS">
-            Groups
-          </span>
+          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__GROUPS"
+            >Groups</span
+          >
         </a>
       </li>
 
