--- a/src/app/modules/blockchain/transaction-overlay/transaction-overlay.component.html
+++ b/src/app/modules/blockchain/transaction-overlay/transaction-overlay.component.html
@@ -61,7 +61,10 @@
 
       <div class="m--blockchain--transaction-overlay--field">
         <label
-          class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect m--blockchain--transaction-overlay--checkbox-label"
+          class="
+            mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect
+            m--blockchain--transaction-overlay--checkbox-label
+          "
           for="tx-overlay-secure-mode-1"
           [mdlSwitch]
           [toggled]="data.unlock.secureMode"
@@ -83,17 +86,16 @@
       </div>
 
       <div class="m--blockchain--transaction-overlay--field">
-        <button class="m-btn" (click)="cancel()" i18n="@@M__ACTION__CANCEL">
-          Cancel
+        <button class="m-btn" (click)="cancel()">
+          <ng-container i18n="@@M__ACTION__CANCEL">Cancel</ng-container>
         </button>
 
         <button
           class="m-btn m-btn--action"
           (click)="unlock()"
           [disabled]="!validateUnlock()"
-          i18n="@@MM__ACTION__COMPLETE"
         >
-          Complete
+          <ng-container i18n="@@MM__ACTION__COMPLETE">Complete</ng-container>
         </button>
       </div>
 
