--- a/src/app/modules/boost/console/booster/booster.component.html
+++ b/src/app/modules/boost/console/booster/booster.component.html
@@ -20,7 +20,7 @@
     </ng-container>
 
     <h3 [hidden]="noContent" i18n="@@BOOST__CONSOLE__BOOSTER__POST_SOMETHING">
-      You have no content yet.
+      You have no content yet. Why don't you post something?
     </h3>
     <div
       *ngIf="inProgress"
