--- a/src/app/modules/boost/console/console.component.html
+++ b/src/app/modules/boost/console/console.component.html
@@ -6,7 +6,7 @@
         routerLink="/boost/console/newsfeed"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__FEATURE__NEWSFEED_PLURAL">Newsfeed</span>
+        <span i18n="@@COMMON__NEWSFEED">Newsfeed</span>
         <m-tooltip
           icon="help"
           i18n="@@MINDS__BOOST_CONSOLE__TOPBAR__NEWSFEED_TOOLTIP"
@@ -19,7 +19,7 @@
         routerLink="/boost/console/content"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__FEATURE__SIDEBAR_PLURAL">Sidebar</span>
+        <span i18n="@@M__FEATURE__SIDEBAR">Sidebar</span>
         <m-tooltip
           icon="help"
           i18n="@@MINDS__BOOST_CONSOLE__TOPBAR__SIDEBAR_TOOLTIP"
