--- a/src/app/modules/boost/creator/payment-methods/payment-methods.component.html
+++ b/src/app/modules/boost/creator/payment-methods/payment-methods.component.html
@@ -22,7 +22,10 @@
     </h5>
 
     <span
-      class="m-boost--creator-selector--description m-boost--creator-selector--description--small"
+      class="
+        m-boost--creator-selector--description
+        m-boost--creator-selector--description--small
+      "
     >
       <m-tooltip anchor="left">
         <span
@@ -97,7 +100,10 @@
     </h5>
 
     <span
-      class="m-boost--creator-selector--description m-boost--creator-selector--description--small"
+      class="
+        m-boost--creator-selector--description
+        m-boost--creator-selector--description--small
+      "
     >
       <m-tooltip anchor="left">
         <span
@@ -128,7 +134,7 @@
       <!-- <li>Max 5k per boost</li> -->
       <li>Stored on Minds servers</li>
       <li>No transaction fee</li>
-      <li style="list-style:none">&nbsp;</li>
+      <li style="list-style: none">&nbsp;</li>
     </ul>
 
     <span
@@ -162,8 +168,11 @@
     </h5>
 
     <span
-      class="m-boost--creator-selector--description m-boost--creator-selector--description--small"
-      i18n="@@M__COMMON__SELECT_MONEY"
+      class="
+        m-boost--creator-selector--description
+        m-boost--creator-selector--description--small
+      "
+      i18n="@@M__COMMON__SELECT_MONEY_NO_PROBLEM"
     >
       Don't have tokens? No problem.
     </span>
@@ -180,14 +189,15 @@
       >monetization_on</i
     >
     <h5>
-      <span i18n="@@BOOST__CREATOR__CC_SELECTOR">Buy Tokens</span>
-      <m-tooltip icon="help" anchor="right">
-        Don't have tokens?
-      </m-tooltip>
+      <span i18n="@@BOOST__CREATOR__BUY_TOKENS">Buy Tokens</span>
+      <m-tooltip icon="help" anchor="right"> Don't have tokens? </m-tooltip>
     </h5>
 
     <span
-      class="m-boost--creator-selector--description m-boost--creator-selector--description--small"
+      class="
+        m-boost--creator-selector--description
+        m-boost--creator-selector--description--small
+      "
       i18n="@@M__COMMON__SELECT_MONEY"
     >
       Don't have tokens?
