--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -143,7 +143,10 @@
           feed?.length < 1 &&
           isOwnedChannel
         "
-        class="m-channelFeed__emptyFeedContainer m-channelFeed__emptyFeedContainer--bordered"
+        class="
+          m-channelFeed__emptyFeedContainer
+          m-channelFeed__emptyFeedContainer--bordered
+        "
       >
         <ng-container [ngSwitch]="feedService.type$ | async">
           <span
@@ -175,7 +178,7 @@
             *ngSwitchCaseDefault
             class="m-channelFeed__emptyFeedTitle"
             i18n="@@M__CHANNEL_FEED__YOU_HAVENT_POSTED__YET_GENERIC*"
-            >Looks like you haven't posted any content of this type yet.</span
+            >Looks like you haven't posted any content of this type yet</span
           >
         </ng-container>
 
@@ -194,7 +197,10 @@
         *ngIf="
           !(feedService.service.inProgress | async) && feed && feed?.length < 1
         "
-        class="m-channelFeed__emptyFeedContainer m-channelFeed__emptyFeedContainer--bordered"
+        class="
+          m-channelFeed__emptyFeedContainer
+          m-channelFeed__emptyFeedContainer--bordered
+        "
       >
         <span
           class="m-channelFeed__emptyFeedTitle"
