--- a/src/app/modules/media/youtube-migration/config/config.component.html
+++ b/src/app/modules/media/youtube-migration/config/config.component.html
@@ -53,7 +53,7 @@
       <a
         (click)="disconnectAccount()"
         i18n="@@YOUTUBE_MIGRATOR__DISCONNECT_YOUTUBE_ACCOUNT"
-        >Disconnect YouTube account</a
+        >Disconnect YouTube Account</a
       >
     </p>
   </div>
