--- a/src/app/modules/pro/channel/footer/footer.component.html
+++ b/src/app/modules/pro/channel/footer/footer.component.html
@@ -16,9 +16,7 @@
     >
       {{ link.title }}
     </a>
-    <a class="m-proChannelFooter__link" routerLink="/p/privacy">
-      Privacy
-    </a>
+    <a class="m-proChannelFooter__link" routerLink="/p/privacy"> Privacy </a>
     <a class="m-proChannelFooter__link" routerLink="/p/monetization-terms">
       Terms
     </a>
@@ -37,8 +35,7 @@
           class="m-proChannelFooter__link"
           (click)="logout()"
           i18n="@@COMMON__LOGOUT"
-        >
-          Logout
+          >Logout
         </a>
       </ng-container>
 
