--- a/src/app/modules/pro/channel/hamburger-menu/hamburger-menu.component.html
+++ b/src/app/modules/pro/channel/hamburger-menu/hamburger-menu.component.html
@@ -86,9 +86,7 @@
     </li>
 
     <li *ngIf="currentUser?.guid != channel?.guid">
-      <a (click)="wire(); closeMenu()">
-        Wire
-      </a>
+      <a (click)="wire(); closeMenu()"> Wire </a>
     </li>
 
     <li class="m-proHamburgerMenu__spacer"></li>
