--- a/src/app/modules/report/console/console.component.html
+++ b/src/app/modules/report/console/console.component.html
@@ -31,7 +31,7 @@
     routerLink="strikes"
     class="mdl-tabs__tab"
     [ngClass]="{ 'is-active': filter == 'strikes' }"
-    i18n="@@M__COMMON__REJECTED"
+    i18n="@@REPORT__CONSOLE__STRIKES_TAB"
     >Strikes</a
   >
 </div>
