--- a/src/app/modules/report/creator/creator.component.html
+++ b/src/app/modules/report/creator/creator.component.html
@@ -89,7 +89,11 @@
 
         <div
           *ngIf="inProgress"
-          class="m-report-creator--submit-label mdl-spinner mdl-js-spinner is-active"
+          class="
+            m-report-creator--submit-label
+            mdl-spinner mdl-js-spinner
+            is-active
+          "
           [mdl]
         ></div>
 
@@ -142,7 +146,7 @@
     *ngIf="success || (next && subject.value === 10)"
   >
     <m-button (onAction)="close()" class="m-reportCreator__button--close">
-      <ng-container i18n="@@M__ACTION__CLOSE__CAPS">Close</ng-container>
+      <ng-container i18n="@@COMMON__CLOSE">Close</ng-container>
     </m-button>
   </div>
 </div>
