--- a/src/app/modules/settings-v2/account/boosted-content/boosted-content.component.html
+++ b/src/app/modules/settings-v2/account/boosted-content/boosted-content.component.html
@@ -182,7 +182,7 @@
           for="liquidity_spot_opt_in"
           class="m-form__customInputWrapper__radio"
         >
-          <ng-container i18n="@@COMMON__ENABLE">Opt-in</ng-container>
+          <ng-container i18n="@@BOOSTED_CONTENT__OPT_IN">Opt-in</ng-container>
           <input
             type="radio"
             id="liquidity_spot_opt_in"
@@ -198,7 +198,7 @@
           for="liquidity_spot_opt_out"
           class="m-form__customInputWrapper__radio"
         >
-          <ng-container i18n="@@COMMON__DISABLE">Opt-out</ng-container>
+          <ng-container i18n="@@BOOSTED_CONTENT__OPT_OUT">Opt-out</ng-container>
           <input
             type="radio"
             id="liquidity_spot_opt_out"
