--- a/src/app/modules/suggestions/channel/sidebar.component.html
+++ b/src/app/modules/suggestions/channel/sidebar.component.html
@@ -101,10 +101,10 @@
 
 <!-- The below is hack because angular does not extract $localize strings-->
 <ng-container *ngIf="false">
-  <ng-container i18n="@@SUGGESTIONS__CHANNEL__TITLE">
-    Suggested Channels
+  <ng-container i18n="@@SUGGESTIONS__CHANNEL__TITLE"
+    >Suggested Channels
   </ng-container>
-  <ng-container i18n="@@SUGGESTIONS__GROUP__TITLE">
-    Suggested Groups
+  <ng-container i18n="@@SUGGESTIONS__GROUP__TITLE"
+    >Suggested Groups
   </ng-container>
 </ng-container>
