--- a/src/app/modules/blockchain/marketing/v2/rewards.component.html
+++ b/src/app/modules/blockchain/marketing/v2/rewards.component.html
@@ -8,9 +8,7 @@
   <div class="m-marketing__main m-marketing__section--style-2">
     <div class="m-grid m-marketing__wrapper">
       <div class="m-grid__column-7 m-grid__column-12--mobile m-marketing__body">
-        <h1 i18n="@@COMMON__MINDS_REWARDS">
-          Minds Rewards
-        </h1>
+        <h1 i18n="@@COMMON__MINDS_REWARDS">Minds Rewards</h1>
 
         <h2
           ngPreserveWhitespaces
@@ -42,7 +40,10 @@
       </div>
 
       <div
-        class="m-grid__column-5 m-grid__column-12--mobile m-marketing__image m-marketing__imageContainer"
+        class="
+          m-grid__column-5 m-grid__column-12--mobile
+          m-marketing__image m-marketing__imageContainer
+        "
       >
         <span>
           <img
@@ -70,8 +71,7 @@
           <p
             class="m-marketing__description"
             i18n="
-               @@BLOCKCHAIN__MARKETING__EARN_DAILY_TOKENS_FOR_POPULAR_CONTENT
-            "
+              @@BLOCKCHAIN__MARKETING__EARN_DAILY_TOKENS_FOR_POPULAR_CONTENT"
           >
             Earn daily tokens for creating popular content or referring your
             friends. Your rewards get multiplied the more active you are on the
@@ -115,7 +115,7 @@
               >
             </li>
 
-            <li i18n="@@BLOCKCHAIN__MARKETING__REMINDS__EQUALS">
+            <li i18n="@@BLOCKCHAIN__MARKETING__REMINDS_OR_QUOTES__EQUALS">
               Reminds or Quotes =
               <em
                 >{contributionValues.reminds, plural, =1
