--- a/src/app/modules/blockchain/token-purchase/v2/buy-tokens-modal.component.html
+++ b/src/app/modules/blockchain/token-purchase/v2/buy-tokens-modal.component.html
@@ -37,9 +37,7 @@
       i18n="@@M__UNISWAP_WARNING"
     >
       <i class="material-icons">info</i>
-      <span>
-        Please check your wallet for transaction updates
-      </span>
+      <span> Please check your wallet for transaction updates </span>
     </div>
 
     <div
@@ -75,7 +73,7 @@
       <m-button
         [disabled]="!canContinue()"
         (onAction)="openPaymentModal()"
-        i18n="@@M__PURCHASE_BUTTON"
+        i18n="@@M__CONTINUE_BUTTON"
       >
         Continue
       </m-button>
