--- a/src/app/modules/boost/console/card/card.component.html
+++ b/src/app/modules/boost/console/card/card.component.html
@@ -79,9 +79,7 @@
         icon="hourglass_empty"
         class="m-boost-card--manager-item__tooltip"
       >
-        <span i18n="@@BOOST__CONSOLE__CARD__REFUNDED_TIME">
-          Refunded
-        </span>
+        <span i18n="@@BOOST__CONSOLE__CARD__REFUNDED_TIME"> Refunded </span>
         <span>: {{ boost.revoked_timestamp | date: 'short' }}</span>
       </m-tooltip>
       {{ boost.state }}
@@ -125,9 +123,8 @@
       color="red"
       (onAction)="revoke()"
       i18n="@@BOOST__CONSOLE__CARD__REVOKE_ACTION"
+      >Revoke</m-button
     >
-      Revoke
-    </m-button>
 
     <m-button
       class="m-boostCardManagerButton--reject"
@@ -135,9 +132,8 @@
       color="red"
       (onAction)="reject()"
       i18n="@@M__ACTION__REJECT"
+      >Reject</m-button
     >
-      Reject
-    </m-button>
 
     <m-button
       class="m-boostCardManagerButton--accept"
@@ -145,9 +141,8 @@
       color="blue"
       (onAction)="accept()"
       i18n="@@M__ACTION__ACCEPT"
+      >Accept</m-button
     >
-      Accept
-    </m-button>
   </div>
 </div>
 
