--- a/src/app/modules/boost/marketing.component.html
+++ b/src/app/modules/boost/marketing.component.html
@@ -8,9 +8,7 @@
   <div class="m-marketing__main m-marketing__section--style-2">
     <div class="m-grid m-marketing__wrapper">
       <div class="m-grid__column-7 m-grid__column-12--mobile m-marketing__body">
-        <h1 i18n="@@COMMON__BOOST">
-          Boost
-        </h1>
+        <h1 i18n="@@COMMON__BOOST">Boost</h1>
 
         <h2
           ngPreserveWhitespaces
@@ -228,7 +226,10 @@
 
       <div class="m-grid m-marketing__wrapper">
         <div
-          class="m-grid__column-12 m-grid__column-12--mobile m-marketing__body m-marketing__body--extra"
+          class="
+            m-grid__column-12 m-grid__column-12--mobile
+            m-marketing__body m-marketing__body--extra
+          "
         >
           <m-button
             color="blue"
