--- a/src/app/modules/composer/components/title-bar/title-bar.component.html
+++ b/src/app/modules/composer/components/title-bar/title-bar.component.html
@@ -4,7 +4,10 @@
       >Compose</label
     >
 
-    <label [for]="inputId" i18n="@@COMPOSER__COMPOSE" *ngIf="remind$ | async"
+    <label
+      [for]="inputId"
+      i18n="@@M__COMPOSER__QUOTE_POST"
+      *ngIf="remind$ | async"
       >Quote post</label
     >
   </div>
