--- a/src/app/modules/notifications/flyout.component.html
+++ b/src/app/modules/notifications/flyout.component.html
@@ -45,14 +45,18 @@
       <a
         [routerLink]="['/notifications']"
         (click)="close()"
-        i18n="@@NOTIFICATIONS__FLYOUT__VIEW_ALL_ACTION"
+        i18n="@@NOTIFICATIONS__FLYOUT__VIEW_ALL_NOTIFS_ACTION"
       >
         See All Notifications
       </a>
     </div>
     <ng-template #oldBottomContainer>
       <div
-        class="m-notifications--flyout--bottom-container mdl-color--blue-grey-50 mdl-color-text--blue-grey-200"
+        class="
+          m-notifications--flyout--bottom-container
+          mdl-color--blue-grey-50
+          mdl-color-text--blue-grey-200
+        "
       >
         <a
           [routerLink]="['/notifications']"
