--- a/src/app/modules/settings-v2/billing/recurring-payments/recurring-payments.component.html
+++ b/src/app/modules/settings-v2/billing/recurring-payments/recurring-payments.component.html
@@ -13,11 +13,11 @@
   </div>
 </m-settingsV2__header>
 
-<div *ngIf="!init" style="width:100%; text-align:center;">
+<div *ngIf="!init" style="width: 100%; text-align: center">
   <div
     class="mdl-spinner mdl-js-spinner is-active"
     [mdl]
-    style="margin: 16px auto;"
+    style="margin: 16px auto"
   ></div>
 </div>
 
@@ -55,13 +55,13 @@
           <span
             *ngIf="subscription.entity.type == 'user'"
             class="m-settingsV2__recurringPayment__recipient"
-            ><i style="text-style:normal">@</i
+            ><i style="text-style: normal">@</i
             >{{ subscription.entity.username }}</span
           >
           <span
             *ngIf="subscription.entity.type != 'user'"
             class="m-settingsV2__recurringPayment__recipient"
-            ><i style="text-style:normal">@</i
+            ><i style="text-style: normal">@</i
             >{{ subscription.entity.ownerObj.username }}</span
           >
         </ng-container>
@@ -95,9 +95,8 @@
           color="grey"
           i18n="@@M__ACTION__CANCEL"
           (onAction)="cancel(i)"
+          >Cancel</m-button
         >
-          Cancel
-        </m-button>
       </div>
     </li>
   </ul>
